# ansible-role-tripleo-designate

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
